--- a/WeBid/trunk/themes/default/bid.html
+++ b/WeBid/trunk/themes/default/bid.html
@@ -51,7 +51,7 @@ $(document).ready(function(){
     <!-- IF B_USERAUTH -->
                 <tr>
                     <td><b>{L_003}</b></td>
-                    <td><b>{USERNAME}</b>
+                    <td><b>{YOURUSERNAME}</b>
                     </td>
                 </tr>
                 <tr bgcolor="#FFFEEE">
