--- a/WeBid/trunk/themes/default/buy_now.html
+++ b/WeBid/trunk/themes/default/buy_now.html
@@ -30,8 +30,8 @@
                     <tr>
                         <td align="right">{L_003}</td>
                         <td>
-                        	<b>{USERNAME}</b>
-                            <input type="hidden" name="nick" value="{USERNAME}">
+                        	<b>{YOURUSERNAME}</b>
+                            <input type="hidden" name="nick" value="{YOURUSERNAME}">
                         </td>
                     </tr>
 	<!-- IF B_USERAUTH -->
