--- a/WeBid/trunk/themes/default/global_header.html
+++ b/WeBid/trunk/themes/default/global_header.html
@@ -75,7 +75,7 @@ $(document).ready(function() {
     <table width="100%" border="0" cellpadding="0" cellspacing="5" class="counters">
       <tr>
         <td>
-          <span class="leftside"><!-- IF B_LOGGED_IN -->{L_200} {USERNAME}. <a href="{SSLURL}logout.php?">{L_245}</a><!-- ENDIF --></span>
+          <span class="leftside"><!-- IF B_LOGGED_IN -->{L_200} {YOURUSERNAME}. <a href="{SSLURL}logout.php?">{L_245}</a><!-- ENDIF --></span>
           <span class="rightside">{HEADERCOUNTER}</span>
         </td>
       </tr>
