--- a/WeBid/trunk/themes/default/home.html
+++ b/WeBid/trunk/themes/default/home.html
@@ -80,7 +80,7 @@
 	<!-- IF B_LOGGED_IN -->
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td class="titTable1"><div class="imgTitL"><img src="{SITEURL}images/transparent.gif" width="10" height="10" alt="space"></div>{L_200} {USERNAME}<div class="imgTitR"><img src="{SITEURL}images/transparent.gif" width="10" height="10" alt="space"></div></td>
+          <td class="titTable1"><div class="imgTitL"><img src="{SITEURL}images/transparent.gif" width="10" height="10" alt="space"></div>{L_200} {YOURUSERNAME}<div class="imgTitR"><img src="{SITEURL}images/transparent.gif" width="10" height="10" alt="space"></div></td>
         </tr>
         <tr>
           <td>
