--- a/WeBid/trunk/themes/default/sell.html
+++ b/WeBid/trunk/themes/default/sell.html
@@ -386,7 +386,7 @@ $(document).ready(function(){
     <!-- IF B_USERAUTH -->
             <tr>
                 <td align="right">{L_003}</td>
-                <td><b>{USERNAME}</b><input type="hidden" name="nick" value="{USERNAME}">
+                <td><b>{YOURUSERNAME}</b><input type="hidden" name="nick" value="{YOURUSERNAME}">
             </tr>
             <tr>
                 <td align="right">{L_004}</td>
