--- a/WeBid/trunk/themes/default/send_email.html
+++ b/WeBid/trunk/themes/default/send_email.html
@@ -52,7 +52,7 @@ function ResetFriendForm(){
         <TR> 
         <TD ALIGN=right> <B>{L_002}</B> 
         </TD>
-        <TD ><INPUT TYPE="TEXT" NAME="sender_name" SIZE="25" VALUE="{USERNAME}"> 
+        <TD ><INPUT TYPE="TEXT" NAME="sender_name" SIZE="25" VALUE="{YOURUSERNAME}"> 
         </TD>
         </TR>
         <!-- comment -->
