--- a/WeBid/trunk/themes/default/user_menu_header.html
+++ b/WeBid/trunk/themes/default/user_menu_header.html
@@ -25,7 +25,7 @@ function submitlogin ()
         <tr>
             <td>
             <div class="titTable4">
-                {L_200}<b>{USERNAME}</b> [<a href="{SITEURL}logout.php">{L_245}</a>]
+                {L_200}<b>{YOURUSERNAME}</b> [<a href="{SITEURL}logout.php">{L_245}</a>]
             </div>
 <!-- IF B_MENUTITLE -->
             <div class="titTable4">
