Standardised the coding

--- a/WeBid/trunk/calendar.html
+++ b/WeBid/trunk/calendar.html
@@ -4,12 +4,9 @@ URL: http://www.softcomplex.com/products/tigra_calendar/
 Version: 3.2
 Date: 10/14/2002 (mm/dd/yyyy)
 Feedback: feedback@softcomplex.com (specify product title in the subject)
-Note: Permission given to use this script in ANY kind of applications if
-   header lines are left unchanged.
+Note: Permission given to use this script in ANY kind of applications if header lines are left unchanged.
 Note: Script consists of two files: calendar?.js and calendar.html
-About us: Our company provides offshore IT consulting services.
-    Contact us at sales@softcomplex.com if you have any programming task you
-    want to be handled by professionals. Our typical hourly rate is $20.
+About us: Our company provides offshore IT consulting services. Contact us at sales@softcomplex.com if you have any programming task you want to be handled by professionals. Our typical hourly rate is $20.
 -->
 <html>
 <head>
