--- a/WeBid/trunk/themes/default/adminbar.html
+++ b/WeBid/trunk/themes/default/adminbar.html
@@ -107,7 +107,8 @@ function SwitchMenu(obj){
 			<img src="images/bul.gif" hspace="2"><a href="https.php" target="content" class="submenulink">{L_1022}</a><br>
 			<img src="images/bul.gif" hspace="2"><a href="checkversion.php" target="content" class="submenulink">{L_25_0169a}</a><br><br>
 			<b><FONT COLOR=#666666>{L_276}</FONT></b><br>
-			<img src="images/bul.gif" hspace="2"><a href="categories.php" target="content" class="submenulink">{L_078}</a><br><br>
+			<img src="images/bul.gif" hspace="2"><a href="categories.php" target="content" class="submenulink">{L_078}</a><br>
+			<img src="images/bul.gif" hspace="2"><a href="categoriestrans.php" target="content" class="submenulink">{L_132}</a><br><br>
 			</span>
 		  </TD>
 		</tr>
@@ -131,6 +132,18 @@ function SwitchMenu(obj){
 			<img src="images/bul.gif" hspace="2"><a href="metatags.php" target="content" class="submenulink">{L_25_0178}</a><br>
 			<img src="images/bul.gif" hspace="2"><a href="contactseller.php" target="content" class="submenulink">{L_25_0216}</a><br>
 			<img src="images/bul.gif" hspace="2"><a href="buyerprivacy.php" target="content" class="submenulink">{L_236}</a><br>
+			</span>
+		  </TD>
+		</tr>
+		<tr>
+		  <td colspan=2><img src="images/bar_sep.gif" width="196" height="3" vspace="1"></td>
+		</tr>
+		<tr>
+		  <td width="30" align="center" valign="top"><img src="images/i_fee.gif" width="16" height="19" hspace="0"></td>
+		  <td width="170">
+		  	<div class="menutitle" onClick="SwitchMenu('fees')">{L_25_0012}</div>
+			<span class="submenu" id="fees">
+			<img src="images/bul.gif" hspace="2"><a href="fees.php" target="content" class="submenulink">{L_25_0012}</a><br>
 			</span>
 		  </TD>
 		</tr>
@@ -217,7 +230,10 @@ function SwitchMenu(obj){
 			<img src="images/bul.gif" hspace="2"><a href="faqscategories.php" target="content" class="submenulink">{L_5230}</a><br>
 			<img src="images/bul.gif" hspace="2"><a href="newfaq.php" target="content" class="submenulink">{L_5231}</a><br>
 			<img src="images/bul.gif" hspace="2"><a href="faqs.php" target="content" class="submenulink">{L_5232}</a><br><br>
-			<img src="images/bul.gif" hspace="2"><a href="boards.menu.php" target="content" class="submenulink">{L_5030}</a><br>
+			<b><FONT COLOR=#666666>{L_5030}</FONT></b><br>
+			<img src="images/bul.gif" hspace="2"><a href="boardsettings.php" target="content" class="submenulink">{L_5047}</a><br>
+			<img src="images/bul.gif" hspace="2"><a href="newboard.php" target="content" class="submenulink">{L_5031}</a><br>
+			<img src="images/bul.gif" hspace="2"><a href="boards.php" target="content" class="submenulink">{L_5032}</a><br>
 			</span>
 		  </TD>
 		</tr>
