--- a/WeBid/trunk/themes/default/admin/adminhome.html
+++ b/WeBid/trunk/themes/default/admin/adminhome.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="{SITEURL}admin/style.css" />
 <style type="text/css">
 .box {
 	margin: 10px 0 10px 0;
@@ -117,7 +117,7 @@ td.title {
 	<tr>
 		<td width="70%">{L_30_0032}</td>
 		<td width="30%">
-			<form action="?action=clearcache" method="post">
+			<form action="{SITEURL}admin/?action=clearcache" method="post">
 				<input type="submit" name="submit" value="{L_30_0031}">
 			</form>
 		</td>
