--- a/WeBid/trunk/themes/default/admin/adminpages.html
+++ b/WeBid/trunk/themes/default/admin/adminpages.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="{SITEURL}fck/fckeditor.js"></script>
+	<link rel="stylesheet" type="text/css" href="{SITEURL}admin/style.css">
+	<script type="text/javascript" src="{SITEURL}admin/{SITEURL}fck/fckeditor.js"></script>
 	<script type="text/javascript">
 		function window_open(pagina,titulo,ancho,largo,x,y){
 		var Ventana= 'toolbar=0,location=0,directories=0,scrollbars=1,screenX='+x+',screenY='+y+',status=0,menubar=0,resizable=0,width='+ancho+',height='+largo;
 		open(pagina,titulo,Ventana);
 		}
 	</script>
-	<script type="text/javascript" src="../js/jquery.js"></script>
+	<script type="text/javascript" src="{SITEURL}admin/{SITEURL}admin/js/jquery.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 		$('a.new-window').click(function(){
@@ -21,10 +21,10 @@
 <body>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
-	<td background="images/bac_barint.gif">
+	<td background="{SITEURL}admin/images/bac_barint.gif">
 		<table width="100%" border="0" cellspacing="5" cellpadding="0">
 			<tr>
-				<td width="30"><img src="images/i_{TYPE}.gif" ></td>
+				<td width="30"><img src="{SITEURL}admin/images/i_{TYPE}.gif" ></td>
 				<td class="white">{TYPENAME}&nbsp;&gt;&gt;&nbsp;{PAGENAME}</td>
 			</tr>
 		</table>
