Cleaned up editauction.php

--- a/WeBid/trunk/themes/default/admin/adminfees.html
+++ b/WeBid/trunk/themes/default/admin/adminfees.html
@@ -73,28 +73,66 @@
 				<table width="100%" cellpadding="2" align="center" bgcolor="#FFFFFF">
 	<!-- IF ERROR ne '' -->
 					<tr bgcolor="yellow">
-						<td class="error" colspan="2" align="center">{ERROR}</td>
+						<td class="error" colspan="6" align="center">{ERROR}</td>
 					</tr>
 	<!-- ENDIF -->
 	<!-- IF B_SINGLE -->
 					<tr valign="top">
 						<td width="109" height="22">{L_263}</td>
-						<td width="375" height="22">
+						<td height="22" colspan="5">
 							<input type="text" size="12" name="value" value="{VALUE}"> {CURRENCY}
 						</td>
 					</tr>
+	<!-- ELSE -->
+					<tr valign="top" bgcolor="#CCCCCC">
+						<td width="120">&nbsp;</td>
+						<td width="120"><b>{L_240} ({CURRENCY})</b></td>
+						<td width="120"><b>{L_241} ({CURRENCY})</b></td>
+						<td width="120"><b>{L_391} ({CURRENCY})</b></td>
+						<td><b>{L_392}</td>
+						<td width="70" align="center"><b>{L_008}</b></td>
+					</tr>
+		<!-- BEGIN fees -->
+					<tr valign="top">
+						<td>&nbsp;</td>
+						<td>
+							<input type="hidden" name="tier_id[]" value="{fees.ID}">
+							<input name="fee_from[]" type="text" value="{fees.FROM}" size="9">
+						</td>
+						<td><input name="fee_to[]" type="text" value="{fees.TO}" size="9"></td>
+						<td><input name="value[]" type="text" value="{fees.VALUE}" size="9"></td>
+						<td>
+							<select name="type[]">
+								<option value="flat"{fees.FLATTYPE}>{L_393}</option>
+								<option value="perc"{fees.PRECTYPE}>{L_357}</option>
+							</select>
+						</td>
+						<td align="center"><input type="checkbox" name="fee_delete[]" value="{fees.ID}"></td>
+					</tr>
+		<!-- END fees -->
+					<tr valign="top">
+						<td>{L_394}</td>
+						<td><input name="new_fee_from" type="text" size="9"></td>
+						<td><input name="new_fee_to" type="text" size="9"></td>
+						<td><input name="new_value" type="text" size="9"></td>
+						<td>
+							<select name="new_type">
+								<option value="flat">{L_393}</option>
+								<option value="perc">{L_357}</option>
+							</select>
+						</td>
+						<td>&nbsp;</td>
+					</tr>
 	<!-- ENDIF -->
 					<tr valign="top">
-						<td height="22">&nbsp;</td>
-						<td height="22">&nbsp;</td>
+						<td height="22" colspan="6">&nbsp;</td>
 					</tr>
 					<tr>
 						<td><input type="hidden" name="action" value="update"></td>
-						<td><input type="submit" name="act" value="{L_530}"></td>
+						<td colspan="5"><input type="submit" name="act" value="{L_530}"></td>
 					</tr>
 					<tr>
-						<td>&nbsp;</td>
-						<td>&nbsp;</td>
+						<td colspan="6">&nbsp;</td>
 					</tr>
 				</table>
 			</td>
