Added template to countries.php

--- a/WeBid/trunk/themes/default/admin/editauction.html
+++ b/WeBid/trunk/themes/default/admin/editauction.html
@@ -30,7 +30,7 @@
 <!-- IF ERROR ne '' -->
 				<tr bgcolor="yellow">
 					<td>&nbsp;</td>
-					<td width="486">{ERROR}</td>
+					<td class="error" width="486">{ERROR}</td>
 				</tr>
 <!-- ENDIF -->
 				<tr>
