--- a/WeBid/trunk/themes/default/admin/wordfilter.html
+++ b/WeBid/trunk/themes/default/admin/wordfilter.html
@@ -8,7 +8,7 @@
 	<td background="images/bac_barint.gif">
 		<table width="100%" border="0" cellspacing="5" cellpadding="0">
 			<tr> 
-				<td width="30"><img src="images/i_too.gif" ></td>
+				<td width="30"><img src="images/i_too.gif"></td>
 				<td class="white">{L_5436}&nbsp;&gt;&gt;&nbsp;{L_5068}</td>
 			</tr>
 		</table>
@@ -29,7 +29,7 @@
 				<table width="100%" cellpadding="2" align="center" bgcolor="#FFFFFF">
 <!-- IF ERROR ne '' -->
 				<tr bgcolor="yellow">
-					<td colspan="2" align="center">{ERROR}</td>
+					<td class="error" colspan="2" align="center">{ERROR}</td>
 				</tr>
 <!-- ENDIF -->
 				<tr valign="top">
