--- a/WeBid/trunk/themes/default/admin/adminbar.html
+++ b/WeBid/trunk/themes/default/admin/adminbar.html
@@ -227,6 +227,7 @@ function SwitchMenu(obj){
 			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/news.php" target="content" class="submenulink">{L_516}</a><br>
 			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/aboutus.php" target="content" class="submenulink">{L_5074}</a><br>
 			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/terms.php" target="content" class="submenulink">{L_5075}</a><br>
+			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/privacypolicy.php" target="content" class="submenulink">{L_402}</a><br><br>
 			<b><FONT COLOR=#666666>{L_148}</FONT></b><br>
 			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/faqscategories.php" target="content" class="submenulink">{L_5230}</a><br>
 			<img src="{SITEURL}admin/images/bul.gif" hspace="2"><a href="{SITEURL}admin/newfaq.php" target="content" class="submenulink">{L_5231}</a><br>
