--- a/WeBid/trunk/themes/default/item.html
+++ b/WeBid/trunk/themes/default/item.html
@@ -275,7 +275,7 @@
 			  </table>
 			  <br>
 			  <b>{L_026}:</b> {PAYMENTS}<br>
-<!-- IF !B_BUY_NOW_ONLY -->
+<!-- IF B_BUY_NOW_ONLY eq false -->
 			  <b><!-- IF ATYPE eq 1 -->{L_127}<!-- ELSE -->{L_038}<!-- ENDIF -->:</b> {MINBID}<br>
 <!-- ENDIF -->
 			  <br>
