--- a/WeBid/trunk/themes/default/send_email.html
+++ b/WeBid/trunk/themes/default/send_email.html
@@ -35,7 +35,7 @@ function ResetFriendForm(){
 		<TD width="60%"><INPUT TYPE="HIDDEN" NAME="seller_nick" SIZE="25" VALUE="{SELLER_NICK}"> 
 		{SELLER_NICK}</TD>
 		</TR>
-	<!-- IF !B_LOGGED_IN -->
+	<!-- IF B_LOGGED_IN eq false -->
 		<TR> 
 		<TD ALIGN=right> <B>{L_006}</B> 
 		</TD>
