--- a/WeBid/trunk/themes/default/admin/adminpages.html
+++ b/WeBid/trunk/themes/default/admin/adminpages.html
@@ -51,8 +51,8 @@
 <!-- ENDIF -->
 <!-- BEGIN block -->
 					<tr valign="top">
-						<td width="109" height="22">{block.TITLE}</td>
-						<td width="375" height="22">
+						<td width="109">{block.TITLE}</td>
+						<td width="375" style="padding:3px;">
 							{block.DESCRIPTION}
 	<!-- IF block.TYPE eq 'yesno' -->
 				<input type="radio" name="{block.NAME}" value="y"<!-- IF block.DEFAULT eq 'y' --> checked<!-- ENDIF -->> {block.TAGLINE1}
