--- a/WeBid/trunk/themes/default/global_footer.html
+++ b/WeBid/trunk/themes/default/global_footer.html
@@ -1,29 +1,35 @@
 <br>
 	<div class="footer">
 		<a href="{SITEURL}index.php?">{L_166}</a>
-		<!-- IF B_CAN_SELL -->
+<!-- IF B_CAN_SELL -->
 		| <a href="{SITEURL}select_category.php?">{L_028}</a>
-		<!-- ENDIF -->
-		<!-- IF B_LOGGED_IN -->
+<!-- ENDIF -->
+<!-- IF B_LOGGED_IN -->
 		| <a href="{SITEURL}user_menu.php?">{L_622}</a> 
 		| <a href="{SSLURL}logout.php?">{L_245}</a> 
-		<!-- ELSE -->
+<!-- ELSE -->
 		| <a href="{SSLURL}register.php?">{L_235}</a> 
 		| <a href="{SSLURL}user_login.php?">{L_052}</a> 
-		<!-- ENDIF -->
+<!-- ENDIF -->
 		| <a href="{SITEURL}faqs.php" alt="faqs" class="new-window">{L_148}</a>
-		<!-- IF B_VIEW_ABOUTUS -->
+<!-- IF B_VIEW_ABOUTUS -->
 		| <a href="{SITEURL}contents.php?show=aboutus">{L_5085}</a> 
-		<!-- ENDIF -->
-		<!-- IF B_VIEW_TERMS -->
+<!-- ENDIF -->
+<!-- IF B_VIEW_PRIVPOL -->
+		| <a href="{SITEURL}contents.php?show=priv">{L_401}</a> 
+<!-- ENDIF -->
+<!-- IF B_VIEW_TERMS -->
 		| <a href="{SITEURL}contents.php?show=terms">{L_5086}</a> 
-		<!-- ENDIF -->
+<!-- ENDIF -->
 		<br>
 	</div>
 	<div class="copyright">
 		{L_COPY}
-		<!-- Please Don't Remove Our Copyright Message -->
-		Powered by <a href='http://www.webidsupport.com/'>WeBid</a> &copy; 2008, 2009 <a href='http://www.webidsupport.com/'>Webid</a>
+		<!--
+			Powered by WeBid
+			Please Don't Remove Our Copyright Message
+		-->
+		Powered by <a href="http://www.webidsupport.com/">WeBid</a> &copy; 2008, 2009 <a href="http://www.webidsupport.com/">Webid</a>
 	</div>
 	</td>
 	</tr>
