Quite a few updates include finished converting the category data structure

--- a/WeBid/trunk/themes/default/admin/viewaccessstats.html
+++ b/WeBid/trunk/themes/default/admin/viewaccessstats.html
@@ -24,7 +24,7 @@
 			<td align="center" colspan="2" bgcolor="#eeeeee">
 				<p class="title" style="color:#000000">
 					{L_5158}<i>{SITENAME}</i><br>
-					{L_5281}
+					{STATSMONTH}
 				</p>
 				<p><a href="viewbrowserstats.php">{L_5165}</a> | <a href="viewdomainstats.php">{L_5166}</a> | <a href="viewplatformstats.php">{L_5318}</a></p>
 			</td>
@@ -58,8 +58,8 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr bgcolor="#CCCCCC">
-			<td align="center" width="80"><b>{L_5280}</b></td>
-			<td align="right" height="21"><a href="viewaccessstats.php">{L_5282}</a></td>
+			<td align="center" width="80"><b>{L_5159}</b></td>
+			<td align="right" height="21"><a href="accessstatshistoric.php">{L_5160}</a></td>
 		</tr>
 <!-- BEGIN sitestats -->
 		<tr bgcolor="#eeeeee">
