--- a/WeBid/trunk/themes/default/edit_details.html
+++ b/WeBid/trunk/themes/default/edit_details.html
@@ -74,6 +74,12 @@
 			</td>
 		</tr>
 		<tr>
+			<td  valign="top" align="right"><b>{L_346}</b> </td>
+			<td>
+				{TOMEZONE}
+			</td>
+		</tr>
+		<tr>
 <!-- IF B_NEWLETTER -->
 			<td  align="right" height="2">
 				<p><b><i>{L_603}</i></b><br></p>
