--- a/WeBid/trunk/themes/default/global_footer.html
+++ b/WeBid/trunk/themes/default/global_footer.html
@@ -26,8 +26,12 @@
 	<div class="copyright">
 		{L_COPY}
 		<!--
-			Powered by WeBid
-			Please Don't Remove Our Copyright Message
+			We request you retain the full copyright notice below including the link to www.webidsupport.com.
+			This not only gives respect to the large amount of time given freely by the developers
+			but also helps build interest, traffic and use of WeBid. If you (honestly) cannot retain
+			the full copyright we ask you at least leave in place the "Powered by WeBid" line, with
+			"WeBid" linked to www.webidsupport.com. If you refuse to include even this then support on our
+			forums may be affected.
 		-->
 		Powered by <a href="http://www.webidsupport.com/">WeBid</a> &copy; 2008, 2009 <a href="http://www.webidsupport.com/">Webid</a>
 	</div>
