Some fixes to the install process

--- a/WeBid/trunk/themes/default/admin/login.html
+++ b/WeBid/trunk/themes/default/admin/login.html
@@ -8,7 +8,7 @@
 	<table width="415" border="0" cellspacing="0" cellpadding="1" bgcolor="#FFFFFF" style="border: 2px #000000 outset;">
 <!-- IF PAGE eq 1 -->
 		<tr bgcolor="#336699">
-			<td colspan="2" align="center" style="padding:10px;">
+			<td colspan="2" align="center" style="padding:10px; color:#FFFFFF;">
 				<b>:: {L_441} ::</b>
 			</td>
 		</tr>
