--- a/WeBid/trunk/themes/default/global_footer.html
+++ b/WeBid/trunk/themes/default/global_footer.html
@@ -33,7 +33,7 @@
 			"WeBid" linked to www.webidsupport.com. If you refuse to include even this then support on our
 			forums may be affected.
 		-->
-		Powered by <a href="http://www.webidsupport.com/">WeBid</a> &copy; 2008, 2009 <a href="http://www.webidsupport.com/">Webid</a>
+		Powered by <a href="http://www.webidsupport.com/">WeBid</a> &copy; 2008, 2009 <a href="http://www.webidsupport.com/">WeBid</a>
 	</div>
 	</td>
 	</tr>
