--- a/WeBid/trunk/themes/default/user_menu_header.html
+++ b/WeBid/trunk/themes/default/user_menu_header.html
@@ -14,6 +14,7 @@ function submitlogin ()
 		<tr>
 			<td>
 			<dl class="phpa-tabs">
+				<dd><a href="{SITEURL}user_menu.php?cptab=summary">{L_25_0080}</a></dd>  
 				<dd><a href="{SITEURL}user_menu.php?cptab=account">{L_25_0081}</a></dd>  
 <!-- IF B_CAN_SELL -->
 				<dd><a href="{SITEURL}user_menu.php?cptab=selling">{L_25_0082}</a></dd>	
